--- a/rejectionbypublisher.html
+++ b/rejectionbypublisher.html
@@ -48,7 +48,7 @@ New Jersey
     <div class="logo">
       <a href="index.html" aria-label="Go to Home">
         <!-- HC - Nav logo src uses site-hosted image for consistency -->
-        <img src="http://eleanoroftenaflynj.com/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
+        <img src="logo/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
       </a>
     </div>
     <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" type="button">
@@ -57,16 +57,11 @@ New Jersey
       <span></span>
     </button>
     <ul class="nav-links">
-      <!-- Menu links -->
-      <!-- HC - Home link targets index.html for consistent navigation -->
       <li><a href="index.html"><span class="nav-label">Home</span></a></li>
       <li class="has-sub">
         <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
         <ul class="nav-sub">
-          <!-- HC - Use updated label in Petition To Prosecute submenu -->
           <li><a href="boroughofficials.html"><span class="nav-label">The People</span></a></li>
-          <!--<li><a href="petitions.html#official2"><span class="nav-label">Tenafly Borough Official #2</span></a></li> -->
-          <!--<li><a href="petitions.html#official3"><span class="nav-label">Tenafly Borough Official #3</span></a></li> -->
         </ul>
       </li>
       <li class="has-sub">
@@ -80,12 +75,12 @@ New Jersey
       <li class="has-sub">
         <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
         <ul class="nav-sub">
-          <li><a href="rejectedobituary.html">Rejected Obituary</a></li>
-          <li><a href="rejectionbypublisher.html">Publisher Rejection Letter</a></li>
-          <li><a href="publishedobituary.html">Published Obituary</a></li>
+          <li><a href="rejectedobituary.html"><span class="nav-label">Rejected Obituary</span></a></li>
+          <li><a href="rejectionbypublisher.html"><span class="nav-label">Publisher Rejection Letter</span></a></li>
+          <li><a href="publishedobituary.html"><span class="nav-label">Published Obituary</span></a></li>
         </ul>
       </li>
-<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+      <li><a href="#contact"><span class="nav-label">Contact</span></a></li>
     </ul>
   </div>
 </nav>
@@ -1002,22 +997,43 @@ Evidence documentation: Coming Soon!<br>
 
 <!-- HC - Use shared navigation behavior from nav.js -->
 <script src="nav.js"></script>
-<!-- Footer navigation -->
-<nav class="footer-nav" aria-label="Footer navigation">
-  <div class="foot-nav-inner">
-    <div class="footer-brand">
-      <a href="index.html" aria-label="Go to Home">
-        <img class="footer-logo" src="http://eleanoroftenaflynj.com/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
-      </a>
-    </div>
+
+<div class="footer-full-bleed">
+  <!-- Footer navigation -->
+  <nav class="footer-nav footer-nav-centered" aria-label="Footer navigation">
+    <div class="foot-nav-inner">
+      <div class="footer-brand">
+        <span class="footer-title"></span>
+            </div>
     <ul class="nav-links">
-      <li><a href="index.html"><span class="nav-label">Home</span></a></li>
-      <li><a href="boroughofficials.html"><span class="nav-label">Petition To Prosecute</span></a></li>
-      <li><a href="legislation.html"><span class="nav-label">Petition for Legislation</span></a></li>
-      <li><a href="rejectedobituary.html"><span class="nav-label">Obituary Info</span></a></li>
-<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+      <li class="footer-contact-only"><a href="#contact"><span class="nav-label">Contact</span></a></li>
     </ul>
-  </div>
-</nav>
+    </div>
+  </nav>
+
+
+  <!-- Begin Bottom Footer Bar with Copyright -->
+  <!-- -->
+
+  <table class="footertablecopyright">
+<!-- Begin Landing Row -->
+<tr>
+<!-- 1st cell at 3% width or left cell -->
+<td align=left valign=top width="3%">&nbsp;
+</td>
+<!-- 2nd cell at 94% width or center cell -->
+<td width="94%" align=center valign=top>
+<!--  -->
+<font size:12px  face="Arial,Helvetica, sans-serif" color="#333333">&copy;&nbsp;eleanoroftenaflynj.com</font>
+</td>
+<!-- 3rd cell at 3% width or right cell -->
+<td align=center valign=top width="3%">&nbsp;
+</td>
+</tr>
+<!-- End Landing Row -->
+  </table>
+  <!-- ENd Bottom Footer Bar with Copyright -->
+</div>
+<!-- ENd Bottom Footer Bar with Copyright -->
 </BODY>
 </HTML>
