--- a/evidence-06-05-2023-010826.html
+++ b/evidence-06-05-2023-010826.html
@@ -68,7 +68,7 @@ New Jersey
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav-inner">
     <div class="logo">
-      <a href="index.html" aria-label="Go to Home">
+      <a href="#home" aria-label="Go to Home">
         <!-- HC - Nav logo src uses site-hosted image for consistency -->
         <img src="logo/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
       </a>
@@ -79,30 +79,35 @@ New Jersey
       <span></span>
     </button>
     <ul class="nav-links">
-      <li><a href="index.html"><span class="nav-label">Home</span></a></li>
+      <!-- Menu links -->
+      <li><a href="#home"><span class="nav-label">Home</span></a></li>
       <li class="has-sub">
-        <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">?</span><span class="nav-plus"  aria-hidden="true">+</span></a>
         <ul class="nav-sub">
+          <!-- HC - Use updated label in Petition To Prosecute submenu -->
           <li><a href="boroughofficials.html"><span class="nav-label">The People</span></a></li>
+          <!--<li><a href="petitions.html#official2"><span class="nav-label">Tenafly Borough Official #2</span></a></li> -->
+          <!--<li><a href="petitions.html#official3"><span class="nav-label">Tenafly Borough Official #3</span></a></li> -->
         </ul>
       </li>
       <li class="has-sub">
-        <a href="#legislation"><span class="nav-label">Petition for Legislation</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#legislation"><span class="nav-label">Petition for Legislation</span><span class="nav-caret" aria-hidden="true">?</span><span class="nav-plus"  aria-hidden="true">+</span></a>
         <ul class="nav-sub">
           <li><a href="legislation.html"><span class="nav-label">Legislation Page #1</span></a></li>
           <!--<li><a href="petitions.html#official2"><span class="nav-label">Legislation Page #2</span></a></li> -->
           <!--<li><a href="petitions.html#official3"><span class="nav-label">Legislation Page #3</span></a></li>> -->
         </ul>
       </li>
+
       <li class="has-sub">
-        <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">?</span><span class="nav-plus"  aria-hidden="true">+</span></a>
         <ul class="nav-sub">
-          <li><a href="rejectedobituary.html"><span class="nav-label">Rejected Obituary</span></a></li>
-          <li><a href="rejectionbypublisher.html"><span class="nav-label">Publisher Rejection Letter</span></a></li>
-          <li><a href="publishedobituary.html"><span class="nav-label">Published Obituary</span></a></li>
+          <li><a href="rejectedobituary.html">Rejected Obituary</a></li>
+          <li><a href="rejectionbypublisher.html">Publisher Rejection Letter</a></li>
+          <li><a href="publishedobituary.html">Published Obituary</a></li>
         </ul>
       </li>
-      <li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
     </ul>
   </div>
 </nav>
