--- a/evidence-10-04-2023-010826.html
+++ b/evidence-10-04-2023-010826.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en-US.utf8">
 <head>
 <meta charset="utf-8">
@@ -77,7 +77,7 @@ function updatemenu() {
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav-inner">
     <div class="logo">
-      <a href="index.html" aria-label="Go to Home">
+      <a href="#home" aria-label="Go to Home">
         <!-- HC - Nav logo src uses site-hosted image for consistency -->
         <img src="logo/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
       </a>
@@ -88,30 +88,35 @@ function updatemenu() {
       <span></span>
     </button>
     <ul class="nav-links">
-      <li><a href="index.html"><span class="nav-label">Home</span></a></li>
+      <!-- Menu links -->
+      <li><a href="#home"><span class="nav-label">Home</span></a></li>
       <li class="has-sub">
-        <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">?</span><span class="nav-plus"  aria-hidden="true">+</span></a>
         <ul class="nav-sub">
+          <!-- HC - Use updated label in Petition To Prosecute submenu -->
           <li><a href="boroughofficials.html"><span class="nav-label">The People</span></a></li>
+          <!--<li><a href="petitions.html#official2"><span class="nav-label">Tenafly Borough Official #2</span></a></li> -->
+          <!--<li><a href="petitions.html#official3"><span class="nav-label">Tenafly Borough Official #3</span></a></li> -->
         </ul>
       </li>
       <li class="has-sub">
-        <a href="#legislation"><span class="nav-label">Petition for Legislation</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#legislation"><span class="nav-label">Petition for Legislation</span><span class="nav-caret" aria-hidden="true">?</span><span class="nav-plus"  aria-hidden="true">+</span></a>
         <ul class="nav-sub">
           <li><a href="legislation.html"><span class="nav-label">Legislation Page #1</span></a></li>
           <!--<li><a href="petitions.html#official2"><span class="nav-label">Legislation Page #2</span></a></li> -->
           <!--<li><a href="petitions.html#official3"><span class="nav-label">Legislation Page #3</span></a></li>> -->
         </ul>
       </li>
+
       <li class="has-sub">
-        <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">?</span><span class="nav-plus"  aria-hidden="true">+</span></a>
         <ul class="nav-sub">
-          <li><a href="rejectedobituary.html"><span class="nav-label">Rejected Obituary</span></a></li>
-          <li><a href="rejectionbypublisher.html"><span class="nav-label">Publisher Rejection Letter</span></a></li>
-          <li><a href="publishedobituary.html"><span class="nav-label">Published Obituary</span></a></li>
+          <li><a href="rejectedobituary.html">Rejected Obituary</a></li>
+          <li><a href="rejectionbypublisher.html">Publisher Rejection Letter</a></li>
+          <li><a href="publishedobituary.html">Published Obituary</a></li>
         </ul>
       </li>
-      <li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
     </ul>
   </div>
 </nav>
@@ -340,7 +345,7 @@ by the Borough Of Tenafly, NJ<br>
 <!-- Second Column of text -->
      <TD Width="71%" valign=top>
 <FONT class=tenafly000099AVHSnonbold12>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-John Doe #3 Does pull up to the property/lot/home in official Borough Of Tenafly vehicle with 'MG' plates at Approx 10:51 am. At 10:52 am John Doe #3 takes a photo of vehicle on property (The lawn). John Doe #3 is photographed waving his arm at resident inside home. At 10:57 am John Doe #3 waves a summons/ticket/crimnal lawsuit at resident inside the home. At 10:58 am John Doe #3 is photographed staring at resident inside the home. At 11 am John Doe #3 is photographed driving slowly away in the opposite direction staring again at resident inside the home. At 11 am John Doe #3 is video recorded parked and staring at resident inside the home. Again while driving away John Doe #3 is photographed staring into resident home.<br>
+John Doe #3 Does pull up to the property/lot/home in official Borough Of Tenafly vehicle with 'MG' plates at Approx 10:51 am. At 10:52 am John Doe #3 takes a photo of vehicle on property (The lawn). John Doe #3 is photographed waving his arm at residen inside home. At 10:57 am John Doe #3 waves a summons/ticket/crimnal lawsuit at resident inside the home. At 10:58 am John Doe #3 is photographed staring at resident inside the home. At 11 am John Doe #3 is photographed driving slowly away in the opposite direction staring again at resident inside the home. At 11 am John Doe #3 is video recorded parked and staring at resident inside the home. Again while driving away John Doe #3 is photographed staring into resident home.<br>
 <br>
 </Font>
 </TD>
@@ -1331,9 +1336,6 @@ Thanks to all nurses and doctors who may have tended to mother during her life. 
 <!-- End pgcontainer -->
 </div>
 <!-- -->
-
-<!-- HC - Use shared navigation behavior from nav.js -->
-<script src="nav.js"></script>
 
 </BODY>
 </HTML>
